[project]
name = "hypmix"
version = "0.1.0"
description = "A Hyperspectral Linear Mixture anlysis code for python."
authors = [
    {name = "Z.M. Vig",email = "zvig@umd.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2,<3.0.0)",
    "h5py (>=3.14.0,<4.0.0)",
    "typing-extensions (>=4.14.1,<5.0.0)",
    "pyqt6 (>=6.10.0,<7.0.0)",
    "superqt (>=0.7.6,<0.8.0)",
    "rasterio (>=1.4.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
