[project]
name = "hypmix"
version = "0.2.3"
description = "A Hyperspectral Linear Mixture anlysis code for python."
authors = [
    {name = "Z.M. Vig",email = "zvig@umd.edu"}
]
readme = "README.md"
requires-python = ">=3.13, <3.15"
dependencies = [
    "numpy (>=2.2,<3.0.0)",
    "h5py (>=3.14.0,<4.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "pyside6 (>=6.10.1,<7.0.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "pyqtgraph (>=0.14.0,<0.15.0)",
    "spectralio (>=0.1.7,<0.2.0)",
    "cmap (>=0.6.2,<0.7.0)"
]


[project.scripts]
mixview = "hypmix.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
